--- a/app/src/main/res/layout-land/activity_user_profile.xml
+++ b/app/src/main/res/layout-land/activity_user_profile.xml
@@ -27,8 +27,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
@@ -103,157 +102,164 @@
             android:layout_height="wrap_content"
             android:text="@string/skills_headline" />
 
-        <!--Layout for progress in Kotlin-->
 
-        <RelativeLayout
+        <!--Main layout for progress-->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/relativeLayout7"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="10dp">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/kotlin_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="20dp"
-                android:contentDescription="@string/kotlin"
-                android:src="@drawable/ic_kotlin"
-                app:tint="?attr/colorControlNormal" />
-
-            <ProgressBar
-                style="@android:style/Widget.ProgressBar.Horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toStartOf="@id/progress_kotlin"
-                android:layout_toEndOf="@id/kotlin_icon"
-                android:progress="0" />
-
-            <TextView
-                android:id="@+id/progress_kotlin"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="20dp"
-                android:text="@string/zero" />
-
-        </RelativeLayout>
-
-        <!--Layout for progress in Android-->
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="10dp">
+            <!--Progress in Android-->
 
             <ImageView
                 android:id="@+id/android_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
                 android:layout_marginEnd="20dp"
-                android:contentDescription="@string/kotlin"
+                android:layout_marginBottom="21dp"
+                android:contentDescription="@string/android"
                 android:src="@drawable/ic_android"
+                app:layout_constraintBottom_toTopOf="@+id/progressBar10"
+                app:layout_constraintEnd_toStartOf="@+id/progressBar9"
+                app:layout_constraintStart_toStartOf="parent"
                 app:tint="?attr/colorControlNormal" />
 
             <ProgressBar
+                android:id="@+id/progressBar9"
                 style="@android:style/Widget.ProgressBar.Horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toStartOf="@id/progress_android"
-                android:layout_toEndOf="@id/android_icon"
-                android:progress="10" />
+                android:layout_marginEnd="20dp"
+                android:progress="0"
+                app:layout_constraintEnd_toStartOf="@+id/progress_android"
+                app:layout_constraintStart_toEndOf="@+id/android_icon"
+                app:layout_constraintTop_toTopOf="@+id/android_icon" />
 
             <TextView
                 android:id="@+id/progress_android"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="20dp"
-                android:text="@string/one" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="134dp"
+                android:text="@string/zero"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressBar9" />
 
-        </RelativeLayout>
 
-        <!--Layout for progress in Apple-->
+            <!--Progress in Kotlin-->
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="10dp">
+            <ImageView
+                android:id="@+id/kotlin_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="19dp"
+                android:layout_marginEnd="20dp"
+                android:contentDescription="@string/kotlin"
+                android:src="@drawable/ic_kotlin"
+                app:layout_constraintEnd_toStartOf="@+id/progressBar10"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/android_icon"
+                app:tint="?attr/colorControlNormal" />
+
+            <ProgressBar
+                android:id="@+id/progressBar10"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:progress="10"
+                app:layout_constraintEnd_toStartOf="@+id/progress_kotlin"
+                app:layout_constraintStart_toEndOf="@+id/kotlin_icon"
+                app:layout_constraintTop_toTopOf="@+id/progress_kotlin" />
+
+            <TextView
+                android:id="@+id/progress_kotlin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/one"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressBar10"
+                app:layout_constraintTop_toBottomOf="@+id/progress_android" />
+
+
+            <!--Progress in iOS-->
+
 
             <ImageView
                 android:id="@+id/apple_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
+                android:layout_marginTop="19dp"
                 android:layout_marginEnd="20dp"
-                android:contentDescription="@string/kotlin"
+                android:contentDescription="@string/ios"
                 android:src="@drawable/ic_apple"
+                app:layout_constraintEnd_toStartOf="@+id/progressBar11"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/kotlin_icon"
                 app:tint="?attr/colorControlNormal" />
 
             <ProgressBar
+                android:id="@+id/progressBar11"
                 style="@android:style/Widget.ProgressBar.Horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toStartOf="@id/progress_apple"
-                android:layout_toEndOf="@id/apple_icon"
-                android:progress="0" />
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="47dp"
+                android:progress="0"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/progress_apple"
+                app:layout_constraintStart_toEndOf="@+id/apple_icon" />
 
             <TextView
                 android:id="@+id/progress_apple"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="20dp"
-                android:text="@string/zero" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="48dp"
+                android:text="@string/zero"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressBar11" />
 
-        </RelativeLayout>
 
-        <!--Layout for progress in Swift-->
+            <!--Progress in Swift-->
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="10dp">
 
             <ImageView
                 android:id="@+id/swift_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
                 android:layout_marginEnd="20dp"
-                android:contentDescription="@string/kotlin"
+                android:contentDescription="@string/swift"
                 android:src="@drawable/ic_swift"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/progressBar12"
+                app:layout_constraintStart_toStartOf="parent"
                 app:tint="?attr/colorControlNormal" />
 
             <ProgressBar
+                android:id="@+id/progressBar12"
                 style="@android:style/Widget.ProgressBar.Horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toStartOf="@id/progress_swift"
-                android:layout_toEndOf="@id/swift_icon"
-                android:progress="0" />
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="2dp"
+                android:progress="0"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/progress_swift"
+                app:layout_constraintStart_toEndOf="@+id/swift_icon" />
 
             <TextView
                 android:id="@+id/progress_swift"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="20dp"
-                android:text="@string/zero" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
+                android:text="@string/zero"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progressBar12" />
 
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!--home works title-->
 
