--- a/app/src/main/res/drawable/border_homeworks.xml
+++ b/app/src/main/res/drawable/border_homeworks.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-        <item>
-            <shape android:shape="rectangle">
-                <stroke android:width="2dp" android:height="2dp"
-                    android:color="@color/grey" />
-                <padding android:left="1dp" android:top="1dp" android:right="1dp"
-                    android:bottom="1dp" />
-
-                <corners android:radius="5dp" android:bottomRightRadius="5dp"
-                    android:bottomLeftRadius="5dp" android:topLeftRadius="5dp"
-                    android:topRightRadius="5dp" />
-            </shape>
-        </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="2dp"
+        android:color="@color/grey" />
+    <padding
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"
+        android:top="1dp" />
+    <corners android:radius="5dp" />
+</shape>
