--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">#A9A9A9</color>
     <color name="yellow">#FCD12A</color>
     <color name="light_grey">#C0C0C0</color>
+    <color name="user_name">#FF000000</color>
 </resources>
