--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!--Titles in user profile (Skills, Homework)-->
-    <style name="title">
+    <style name="Title">
         <item name="android:textColor">@color/grey</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">normal</item>
@@ -13,11 +13,11 @@
     </style>
 
     <!--Username in user profile-->
-    <style name="username">
+    <style name="Username">
         <item name="android:textSize">20sp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Headline</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/user_name</item>
     </style>
 
 
