--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -118,16 +118,15 @@
                 android:id="@+id/android_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_medium"
                 android:contentDescription="@string/android"
                 android:src="@drawable/ic_android"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/progressBar9"
+                app:layout_constraintEnd_toStartOf="@+id/progressBarAndroid"
                 app:layout_constraintStart_toStartOf="parent"
                 app:tint="?attr/colorControlNormal" />
 
             <ProgressBar
-                android:id="@+id/progressBar9"
+                android:id="@+id/progressBarAndroid"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -145,7 +144,7 @@
                 android:text="@string/zero"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/progressBar9" />
+                app:layout_constraintStart_toEndOf="@+id/progressBarAndroid" />
 
             <!--Progress in Kotlin-->
             <ImageView
@@ -155,13 +154,13 @@
                 android:layout_marginTop="@dimen/spacing_medium"
                 android:contentDescription="@string/kotlin"
                 android:src="@drawable/ic_kotlin"
-                app:layout_constraintEnd_toStartOf="@+id/progressBar10"
+                app:layout_constraintEnd_toStartOf="@+id/progressBarKotlin"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/android_icon"
                 app:tint="?attr/colorControlNormal" />
 
             <ProgressBar
-                android:id="@+id/progressBar10"
+                android:id="@+id/progressBarKotlin"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -179,7 +178,7 @@
                 android:layout_marginTop="@dimen/spacing_large"
                 android:text="@string/one"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/progressBar10"
+                app:layout_constraintStart_toEndOf="@+id/progressBarKotlin"
                 app:layout_constraintTop_toBottomOf="@+id/progress_android" />
 
 
@@ -191,13 +190,13 @@
                 android:layout_marginTop="@dimen/spacing_medium"
                 android:contentDescription="@string/ios"
                 android:src="@drawable/ic_apple"
-                app:layout_constraintEnd_toStartOf="@+id/progressBar11"
+                app:layout_constraintEnd_toStartOf="@+id/progressBariOS"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/kotlin_icon"
                 app:tint="?attr/colorControlNormal" />
 
             <ProgressBar
-                android:id="@+id/progressBar11"
+                android:id="@+id/progressBariOS"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -215,7 +214,7 @@
                 android:layout_marginTop="@dimen/spacing_large"
                 android:text="@string/zero"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/progressBar11"
+                app:layout_constraintStart_toEndOf="@+id/progressBariOS"
                 app:layout_constraintTop_toBottomOf="@+id/progress_kotlin" />
 
             <!--Progress in Swift-->
@@ -227,12 +226,12 @@
                 android:contentDescription="@string/swift"
                 android:src="@drawable/ic_swift"
                 app:layout_constraintTop_toBottomOf="@id/apple_icon"
-                app:layout_constraintEnd_toStartOf="@+id/progressBar12"
+                app:layout_constraintEnd_toStartOf="@+id/progressBarSwift"
                 app:layout_constraintStart_toStartOf="parent"
                 app:tint="?attr/colorControlNormal" />
 
             <ProgressBar
-                android:id="@+id/progressBar12"
+                android:id="@+id/progressBarSwift"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -251,7 +250,7 @@
                 android:text="@string/zero"
                 app:layout_constraintTop_toBottomOf="@id/progress_apple"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/progressBar12" />
+                app:layout_constraintStart_toEndOf="@+id/progressBarSwift" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
