--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--spacings-->
     <dimen name="spacing_Xsmall">5dp</dimen>
     <dimen name="spacing_small">10dp</dimen>
     <dimen name= "spacing_Xmedium">15dp</dimen>
     <dimen name="spacing_medium">20dp</dimen>
     <dimen name= "spacing_large">25dp</dimen>
     <dimen name= "spacing_Xlarge">50dp</dimen>
-    <dimen name="medium_square_icon">40dp</dimen>
+    <!--square icons-->
+    <dimen name = "square_icon_Xsmall">20dp</dimen>
+    <dimen name="square_icon_small">30dp</dimen>
+    <dimen name="large_square_icon">120dp</dimen>
     <dimen name= "xl_square_icon">180dp</dimen>
-    <dimen name = "xl_circle_icon">100dp</dimen>
 </resources>
