--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="yellow">#FCD12A</color>
     <color name="light_grey">#C0C0C0</color>
     <color name="user_name">#FF000000</color>
+    <color name="navy">#02064a</color>
 </resources>
