--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,11 @@
     <!--square icons-->
     <dimen name = "square_icon_Xsmall">20dp</dimen>
     <dimen name="square_icon_small">30dp</dimen>
+    <dimen name="square_icon_medium">50dp</dimen>
     <dimen name="large_square_icon">120dp</dimen>
     <dimen name= "xl_square_icon">180dp</dimen>
+    <!-- text sizes -->
+    <dimen name="small_text">10sp</dimen>
+    <dimen name="medium_text">15sp</dimen>
+    <dimen name="large_text">20sp</dimen>
 </resources>
