--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <!--Titles in user profile (Skills, Homework)-->
     <style name="Title">
         <item name="android:textColor">@color/grey</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/large_text</item>
         <item name="android:textStyle">normal</item>
         <item name="textAllCaps">true</item>
         <item name="android:layout_marginTop">15dp</item>
@@ -15,14 +15,14 @@
     <style name="User_list_name">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/medium_text</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
         <item name="textAllCaps">false</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Headline</item>
     </style>
 
     <!--Username in user profile-->
     <style name="Username">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/large_text</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Headline</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/user_name</item>
