--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/userListScreen">
 
     <fragment
         android:id="@+id/userListScreen"
-        android:name="com.example.emaapp.view.UserListFragment" />
+        android:name="com.example.emaapp.view.UserListFragment"
+        android:label="@string/user_list_title">
+        <action
+            android:id="@+id/action_userListScreen_to_userProfileActivity"
+            app:destination="@id/userProfileActivity" />
+    </fragment>
+    <activity
+        android:id="@+id/userProfileActivity"
+        android:name="com.example.emaapp.view.UserProfileActivity"
+        android:label="activity_user_profile"
+        tools:layout="@layout/fragment_user_profile" >
+        <argument
+            android:name="name"
+            app:argType="string" />
+    </activity>
 
 </navigation>
