--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,18 +3,19 @@
     <!--spacings-->
     <dimen name="spacing_Xsmall">5dp</dimen>
     <dimen name="spacing_small">10dp</dimen>
-    <dimen name= "spacing_Xmedium">15dp</dimen>
+    <dimen name="spacing_Xmedium">15dp</dimen>
     <dimen name="spacing_medium">20dp</dimen>
-    <dimen name= "spacing_large">25dp</dimen>
-    <dimen name= "spacing_Xlarge">50dp</dimen>
+    <dimen name="spacing_large">25dp</dimen>
+    <dimen name="spacing_Xlarge">50dp</dimen>
     <!--square icons-->
-    <dimen name = "square_icon_Xsmall">20dp</dimen>
+    <dimen name="square_icon_Xsmall">20dp</dimen>
     <dimen name="square_icon_small">30dp</dimen>
     <dimen name="square_icon_medium">50dp</dimen>
     <dimen name="large_square_icon">120dp</dimen>
-    <dimen name= "xl_square_icon">180dp</dimen>
+    <dimen name="xl_square_icon">180dp</dimen>
     <!-- text sizes -->
     <dimen name="small_text">10sp</dimen>
     <dimen name="medium_text">15sp</dimen>
     <dimen name="large_text">20sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
