--- a/app/src/main/res/layout/layout_row.xml
+++ b/app/src/main/res/layout/layout_row.xml
@@ -44,66 +44,13 @@
             android:layout_toEndOf="@id/list_platform_id"
             android:text="@string/user_name" />
 
-        <!-- homework 1 -->
-        <ImageView
-            android:id="@+id/list_hw1"
+        <include layout="@layout/homework_num_status"
+            android:layout_below="@id/list_user_name"
+            android:layout_toEndOf="@id/list_user_icon"
+            android:layout_height="match_parent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/list_user_name"
-            android:layout_alignStart="@+id/list_user_name"
-            android:src="@drawable/ic_one"
-            android:layout_marginTop="@dimen/spacing_Xsmall"
-            android:contentDescription="@string/home_works" />
-
-        <!-- homework 2 -->
-        <ImageView
-            android:id="@+id/list_hw2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/list_hw1"
-            android:layout_toEndOf="@id/list_hw1"
-            android:src="@drawable/ic_two"
-            android:contentDescription="@string/home_works"/>
-
-        <!-- homework 3 -->
-        <ImageView
-            android:id="@+id/list_hw3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/list_hw2"
-            android:layout_toEndOf="@id/list_hw2"
-            android:src="@drawable/ic_three"
-            android:contentDescription="@string/home_works"/>
-
-        <!-- homework 4 -->
-        <ImageView
-            android:id="@+id/list_hw4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/list_hw3"
-            android:layout_toEndOf="@id/list_hw3"
-            android:src="@drawable/ic_four"
-            android:contentDescription="@string/home_works"/>
-
-        <!-- homework 5 -->
-        <ImageView
-            android:id="@+id/list_hw5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/list_hw4"
-            android:layout_toEndOf="@id/list_hw4"
-            android:src="@drawable/ic_five"
-            android:contentDescription="@string/home_works"/>
-
-        <!-- homework 6 -->
-        <ImageView
-            android:id="@+id/list_hw6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/list_hw5"
-            android:layout_toEndOf="@id/list_hw5"
-            android:src="@drawable/ic_five"
-            android:contentDescription="@string/home_works"/>
+            android:layout_marginStart="@dimen/spacing_medium"
+            android:layout_marginTop="@dimen/spacing_Xsmall"/>
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
