--- a/app/src/main/res/layout/layout_row.xml
+++ b/app/src/main/res/layout/layout_row.xml
@@ -17,7 +17,7 @@
             android:layout_height="@dimen/square_icon_medium"
             android:contentDescription="@string/user_icon"
             app:shapeAppearanceOverlay="@style/circleImageView"
-            app:srcCompat="@drawable/me" />
+            app:srcCompat="@drawable/girl4" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/list_platform_id"
