fixed: data in user profile are dynamically updated

--- a/app/src/main/res/layout/user_filter.xml
+++ b/app/src/main/res/layout/user_filter.xml
@@ -2,9 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/teal_700"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/purple_500"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/toggleButtonGroup"
@@ -21,27 +20,30 @@
             style="@style/ToggleButtonWithIconOnly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="168dp"
-            tools:layout_editor_absoluteY="153dp"
-            android:text="@string/user_filter_all"/>
+            android:layout_weight="3"
+            android:text="@string/user_filter_all"
+            android:textColor="@color/white"
+            android:onClick="@color/purple_700"/>
 
         <Button
             android:id="@+id/button_android"
             style="@style/ToggleButtonWithIconOnly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="173dp"
-            tools:layout_editor_absoluteY="251dp"
-            android:text="@string/user_filter_android"/>
+            android:layout_weight="3"
+            android:text="@string/user_filter_android"
+            android:textColor="@color/white"
+            android:onClick="@color/purple_700"/>
 
         <Button
             android:id="@+id/button_iOs"
             style="@style/ToggleButtonWithIconOnly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="166dp"
-            tools:layout_editor_absoluteY="340dp"
-            android:text="@string/user_filter_iOS"/>
+          android:layout_weight="3"
+            android:text="@string/user_filter_iOS"
+            android:textColor="@color/white"
+            android:onClick="@color/purple_700"/>
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
