--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,11 +34,14 @@
         <item name="cornerSize">50%</item>
     </style>
 
-    <!--toggle button styles: https://gist.github.com/smartherd/86d000ea08092d93863aae10c2c64dcf -->
+    <!--toggle button styles-->
     <style name="ToggleButtonWithIconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:paddingLeft">@dimen/spacing_small</item>
         <item name="android:paddingRight">@dimen/spacing_small</item>
         <item name="android:height">@dimen/square_icon_small</item>
+        <item name="backgroundColor">@color/purple_500</item>
+        <item name="android:onClick">@color/purple_700</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
