--- a/app/src/main/res/layout/user_filter.xml
+++ b/app/src/main/res/layout/user_filter.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/purple_500"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/purple_500">
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/toggleButtonGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:singleSelection="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:singleSelection="true">
 
         <Button
             android:id="@+id/button_all"
@@ -21,9 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="@string/user_filter_all"
-            android:textColor="@color/white"
-            android:onClick="@color/purple_700"/>
+            android:text="@string/user_filter_all" />
 
         <Button
             android:id="@+id/button_android"
@@ -31,19 +29,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="@string/user_filter_android"
-            android:textColor="@color/white"
-            android:onClick="@color/purple_700"/>
+            android:text="@string/user_filter_android" />
 
         <Button
             android:id="@+id/button_iOs"
             style="@style/ToggleButtonWithIconOnly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-          android:layout_weight="3"
-            android:text="@string/user_filter_iOS"
-            android:textColor="@color/white"
-            android:onClick="@color/purple_700"/>
+            android:layout_weight="3"
+            android:text="@string/user_filter_iOS" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 </androidx.constraintlayout.widget.ConstraintLayout>
