fixed: users are being filtered via toggle buttons instead of a menu

--- a/app/src/main/res/layout/filter_layout.xml
+++ b/app/src/main/res/layout/filter_layout.xml
@@ -5,7 +5,7 @@
 
     <Button
         android:id="@+id/button_all"
-        style="@style/ToggleButtonWithIconOnly"
+        style="@style/ToggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="3"
@@ -13,7 +13,7 @@
 
     <Button
         android:id="@+id/button_android"
-        style="@style/ToggleButtonWithIconOnly"
+        style="@style/ToggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="3"
@@ -21,7 +21,7 @@
 
     <Button
         android:id="@+id/button_iOs"
-        style="@style/ToggleButtonWithIconOnly"
+        style="@style/ToggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="3"
