--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/userListFragment"
         android:name="com.example.emaapp.view.UserListFragment"
-        android:label="Students List">
+        android:label="@string/first_fragment_label">
         <action
             android:id="@+id/action_userListFragment_to_userProfileFragment4"
             app:destination="@id/userProfileFragment" />
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/userProfileFragment"
         android:name="com.example.emaapp.view.UserProfileFragment"
-        android:label="User Profile">
+        android:label="@string/second_fragment_label">
         <argument
             android:name="name"
             app:argType="string" />
