--- a/app/src/main/res/layout/user_filter.xml
+++ b/app/src/main/res/layout/user_filter.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_user_filter"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/purple_500">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/toggleButtonGroup"
@@ -17,15 +17,15 @@
 
         <Button
             android:id="@+id/button_all"
-            style="@style/ToggleButtonWithIconOnly"
+            style="@style/ToggleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:text="@string/user_filter_all" />
+            android:text="@string/user_filter_all"/>
 
         <Button
             android:id="@+id/button_android"
-            style="@style/ToggleButtonWithIconOnly"
+            style="@style/ToggleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -33,7 +33,7 @@
 
         <Button
             android:id="@+id/button_iOs"
-            style="@style/ToggleButtonWithIconOnly"
+            style="@style/ToggleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
